...
  final bool hasPlugins;

  EditorBuildViewModel({
    required this.projectName,
    required this.projectDir,
    required this.startBuild,
    this.engineVersion = '0.0.1',
    this.hasPlugins = true,
  });

  static const int logTailLines = 10;

  EditorBuildJob? _job;
...
